# web-memento-damage

./: .dockerignore  .gitignore  Dockerfile  Dockerfile (copy)  Dockerfile~  LICENSE  MANIFEST  README.md  bgcolor.js  buildWhitespaceRatios.pl  cacheresult.csv  config.py  damage  damage.py  entrypoint.sh  findAvgWhitespace.pl  findCSS.pl  findDamage.pl  jsconfig.json  measureCSS.pl  measureMemento.pl  measureMemento.pl.bak  measureMemento.pl.debug  measureMemento.pl~  nginx.conf  northface.txt  package-lock.json  package.json  position.js  pyproject.toml  rasterize.js  requirement.txt  requirements.txt  rerun_measureMemento2.pl  rerun_whitespace.pl  server-xvfb.sh  server.bat  server.py  server.sh  setup.py  (+14 more)
app/: __init__.py
app/templates/: dashgumfree.html  frontpage.html  hierapolis.html  index.html  layout.html  templatevamp.html
cli/: damage.py
docker/: Dockerfile  docker-compose.yml
docker/cli/: damage
docker/entrypoint/: start.sh
docker/server/: configure-nginx.sh  start-all.sh
ext/: crawl.py  crawl_selenium.py  damage.py  memento.py  tools.py
ext/blueprint/: __init__.py  application.py  blueprint.py  request_handler.py  (+1 more)
memento_damage/: __init__.py  command.txt  damage_analysis.py  tools.py  uris.txt  uris_distinct.txt
rerun_bkps/: rerun_measureMemento.pl  rerun_whitespace.pl
test/: damage.py  filteredURI-Rs.txt  pilot_results_run4.csv  pilot_results_run4_filtered.csv  pilot_results_run4_uris.csv  test_uri.txt  urim1.csv  urim2.csv  uris.txt
testing/: memento_damage_test.py  theOutFile.404  theOutFile.html  uris.txt
web/: __init__.py
(+156 files in other folders)
